# tiny-pl-vc

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  res  tiny-pl-nondet.cabal  tiny-pl-vc.cabal
app/: Main.hs
grammar/: Syntax.cf
src/Tiny/: Semant.hs
src/Tiny/Syntax/: AbsSyntax.hs  DocSyntax.txt  ErrM.hs  LexSyntax.x  ParSyntax.y  PrintSyntax.hs  SkelSyntax.hs  TestSyntax.hs
tests/: fast-times.tpl  presentation.tpl  swap.tpl
